--- a/lincolnseries.html
+++ b/lincolnseries.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="styleslincolnseries.css">
   <nav>
       <ul>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="index.html">Portfolio</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
       </ul>
