--- a/flowerfields.html
+++ b/flowerfields.html
@@ -1,15 +1,32 @@
-<header>
-  <link rel="stylesheet" href="flowerfields.css">
-  <nav>
-      <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Buona Project</title>
+    <link rel="stylesheet" href="pizzabuona.css">
+    <!DOCTYPE html>
+<html lang="en">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<img src="Images/BrownFlower2.png" class="Flower2">
+<img src="Images/DarkPinkFlower2.png" class="Flower2">
 
 <section class="slide">
   <div class="text-content">
@@ -44,7 +61,7 @@
 <div class="random-note" style="top: 300px; right: 50px; color: #3f1b16;">Interesting fact about this design.</div>
 </div> -->
 
-<img src="Images/BrownFlower1.png" class="Flower1">
+<img src="Images/DarkPinkFlower1.png" class="Flower1">
 
 <!-- <p class="Note1">The Tracing</p> -->
 
@@ -58,5 +75,5 @@
       <p>© 2025 Kayleen Scott. All rights reserved.</p>
   </div>
 </footer>
-
+</body>
 <script src="script.js"></script>
