--- a/lincolnseries.html
+++ b/lincolnseries.html
@@ -1,62 +1,73 @@
-<header>
-  <link rel="stylesheet" href="styleslincolnseries.css">
-  <nav>
-      <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Buona Project</title>
+    <link rel="stylesheet" href="pizzabuona.css">
+    <!DOCTYPE html>
+<html lang="en">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<img src="Images/DarkPinkFlower2.png" class="Flower2">
+  <img src="Images/DarkPinkFlower2.png" class="Flower2" alt="Dark pink flower decoration">
 
-<section class="slide">
-  <div class="text-content">
+  <section class="slide">
+    <div class="text-content">
       <h2>Lincoln Series</h2>
       <p class="bodycopy">For this project, I made a series for the city of Lincoln highlighting the interesting spots within the city. My goal was to create something that reflected the art deco style.
 
-        To get the style I was going for, I realized that art deco was very blocky with clean lines and simple illustrations. I decided to try this and keep it simple while layering the illustrations to add some depth. </p>
-  </div>
-  <div class="image-content">
+        To get the style I was going for, I realized that art deco was very blocky with clean lines and simple illustrations. I decided to try this and keep it simple while layering the illustrations to add some depth.</p>
+    </div>
+    <div class="image-content">
       <img src="Images/LincolnSeriesOpener.png" alt="Lincoln Series Sunken Gardens Poster and a Sticker">
-  </div>
-</section>
+    </div>
+  </section>
 
-<section>
-  <div class="full-image">
+  <section>
+    <div class="full-image">
       <img src="Images/LincolnSeriesPosters.png" alt="Lincoln Series Posters">
-  </div>
-</section>
+    </div>
+  </section>
 
-<section>
-  <div class="full-image-2">
-      <img src="Images/StickersandPostcards.png" alt="Sitckers and Postcards">
-  </div>
-</section>
+  <section>
+    <div class="full-image-2">
+      <img src="Images/StickersandPostcards.png" alt="Stickers and Postcards">
+    </div>
+  </section>
 
-<!-- <section>
-  <div class="full-image-3">
-      <img src="Images/PizzaBuonaTrayLinerCoastersandPizzaBox.png" alt="Pizza Buona Coasters, Trayliner, and Pizza Box">
-  </div>
-</section> -->
+  <img src="Images/DarkPinkFlower1.png" class="Flower1" alt="Dark pink flower decoration">
 
-<!-- Random Notes Floating -->
-<!-- <div class="random-note" style="top: 50px; left: 100px; color: #3f1b16;">This was a key moment in the project!</div>
-<div class="random-note" style="top: 300px; right: 50px; color: #3f1b16;">Interesting fact about this design.</div>
-</div> -->
-
-<img src="Images/DarkPinkFlower1.png" class="Flower1">
-
-<footer>
-  <div class="footer-container">
+  <footer>
+    <div class="footer-container">
       <div class="socials">
-          <a href="mailto:kayleenannscott@gmail.com" target="_blank"><img src="Images/EmailLogo.png" alt="Gmail"></a> <a href=mailto:kayleenannscott@gmail.com> <p>kayleenannscott@gmail.com</p></a>
-          <a href="https://www.instagram.com/thatkatdraws/" target="_blank"><img src="Images/InstagramLogo.png" alt="Instagram"></a> <a href=https://www.instagram.com/thatkatdraws> <p>@thatkatdraws</p></a>
-          <a href="https://www.linkedin.com/in/kayleen-scott-310678307/" target="_blank"><img src="Images/LinkedInLogo.png" alt="LinkedIn"></a> <a href=https://www.linkedin.com/in/kayleen-scott-310678307> <p>LinkedIn</p></a>
+        <a href="mailto:kayleenannscott@gmail.com" target="_blank"><img src="Images/EmailLogo.png" alt="Gmail"></a>
+        <p>kayleenannscott@gmail.com</p>
+        <a href="https://www.instagram.com/thatkatdraws/" target="_blank"><img src="Images/InstagramLogo.png" alt="Instagram"></a>
+        <p>@thatkatdraws</p>
+        <a href="https://www.linkedin.com/in/kayleen-scott-310678307/" target="_blank"><img src="Images/LinkedInLogo.png" alt="LinkedIn"></a>
+        <p>LinkedIn</p>
       </div>
       <p>© 2025 Kayleen Scott. All rights reserved.</p>
-  </div>
-</footer>
+    </div>
+  </footer>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
