--- a/pizzabuona.html
+++ b/pizzabuona.html
@@ -1,67 +1,91 @@
-<header>
-  <link rel="stylesheet" href="styles.css">
-  <nav>
-      <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
-</header>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Buona Project</title>
+    <link rel="stylesheet" href="pizzabuona.css">
+    <!DOCTYPE html>
+<html lang="en">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</head>
 <body>
-  
-<img src="Images/BrownFlower2.png" class="Flower2">
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<section class="slide">
-  <div class="text-content">
-      <h2>Pizza Buona</h2>
-      <p class="bodycopy">For this project, I developed a full brand identity, including a logo, packaging design, and brand guide. My goal was to create packaging that felt complex but not overwhelming, and something that felt  a little more pricey.
+    <!-- Floral Image (for background decoration) -->
+    <img src="Images/DarkPinkFlower2.png" class="Flower2" alt="Flower Decoration">
 
-        To achieve this, I focused on balancing fun and illustrative designs with my own style. I chose a softer color palette paired with dynamic elements to bring a handcrafted yet refined feel. </p>
-  </div>
-  <div class="image-content">
-      <img src="Images/PizzaBuonaBrandGuide.png" alt="Pizza Buona Brand Guide and Sketches">
-  </div>
-</section>
+    <!-- Project Description -->
+    <section class="slide">
+        <div class="text-content">
+            <h2>Pizza Buona</h2>
+            <p class="bodycopy">For this project, I developed a full brand identity, including a logo, packaging design, and brand guide. My goal was to create packaging that felt complex but not overwhelming, and something that felt a little more pricey.
 
-<section>
-  <div class="full-image">
-      <img src="Images/Pizza Buona Photo.png" alt="Final of Pizza Buona Packaging">
-  </div>
-</section>
+                To achieve this, I focused on balancing fun and illustrative designs with my own style. I chose a softer color palette paired with dynamic elements to bring a handcrafted yet refined feel.</p>
+        </div>
+        <div class="image-content">
+            <img src="Images/PizzaBuonaBrandGuide.png" alt="Pizza Buona Brand Guide and Sketches" loading="lazy">
+        </div>
+    </section>
 
-<section>
-  <div class="full-image-2">
-      <img src="Images/PizzaBuonaMenu-02.png" alt="Pizza Buona Menu">
-  </div>
-</section>
+    <!-- Full-Width Image of Final Packaging -->
+    <section>
+        <div class="full-image">
+            <img src="Images/Pizza Buona Photo.png" alt="Final of Pizza Buona Packaging" loading="lazy">
+        </div>
+    </section>
 
-<section>
-  <div class="full-image-3">
-      <img src="Images/PizzaBuonaTrayLinerCoastersandPizzaBox.png" alt="Pizza Buona Coasters, Trayliner, and Pizza Box">
-  </div>
-</section>
+    <!-- Pizza Menu Image -->
+    <section>
+        <div class="full-image-2">
+            <img src="Images/PizzaBuonaMenu-02.png" alt="Pizza Buona Menu" loading="lazy">
+        </div>
+    </section>
 
-<!-- Random Notes Floating -->
-<!-- <div class="random-note" style="top: 50px; left: 100px; color: #3f1b16;">This was a key moment in the project!</div>
-<div class="random-note" style="top: 300px; right: 50px; color: #3f1b16;">Interesting fact about this design.</div>
-</div> -->
+    <!-- Coasters, Trayliner, and Pizza Box Image -->
+    <section>
+        <div class="full-image-3">
+            <img src="Images/PizzaBuonaTrayLinerCoastersandPizzaBox.png" alt="Pizza Buona Coasters, Trayliner, and Pizza Box" loading="lazy">
+        </div>
+    </section>
 
-<script src="script.js"></script>
+    <!-- Random Notes Floating (commented out for now) -->
+    <!-- <div class="random-note" style="top: 50px; left: 100px; color: #3f1b16;">This was a key moment in the project!</div>
+    <div class="random-note" style="top: 300px; right: 50px; color: #3f1b16;">Interesting fact about this design.</div> -->
 
-<img src="Images/BrownFlower1.png" class="Flower1">
+    <script src="script.js"></script>
 
-<footer>
-  <div class="footer-container">
-      <div class="socials">
-          <a href="mailto:kayleenannscott@gmail.com" target="_blank"><img src="Images/EmailLogo.png" alt="Gmail"></a> <a href=mailto:kayleenannscott@gmail.com> <p>kayleenannscott@gmail.com</p></a>
-          <a href="https://www.instagram.com/thatkatdraws/" target="_blank"><img src="Images/InstagramLogo.png" alt="Instagram"></a> <a href=https://www.instagram.com/thatkatdraws> <p>@thatkatdraws</p></a>
-          <a href="https://www.linkedin.com/in/kayleen-scott-310678307/" target="_blank"><img src="Images/LinkedInLogo.png" alt="LinkedIn"></a> <a href=https://www.linkedin.com/in/kayleen-scott-310678307> <p>LinkedIn</p></a>
-      </div>
-      <p>© 2025 Kayleen Scott. All rights reserved.</p>
-  </div>
-</footer>
+    <!-- Floral Image (for background decoration) -->
+    <img src="Images/DarkPinkFlower1.png" class="Flower1" alt="Flower Decoration">
 
-
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="socials">
+                <a href="mailto:kayleenannscott@gmail.com" target="_blank"><img src="Images/EmailLogo.png" alt="Gmail"></a> 
+                <a href="mailto:kayleenannscott@gmail.com"> <p>kayleenannscott@gmail.com</p></a>
+                <a href="https://www.instagram.com/thatkatdraws/" target="_blank"><img src="Images/InstagramLogo.png" alt="Instagram"></a> 
+                <a href="https://www.instagram.com/thatkatdraws"> <p>@thatkatdraws</p></a>
+                <a href="https://www.linkedin.com/in/kayleen-scott-310678307/" target="_blank"><img src="Images/LinkedInLogo.png" alt="LinkedIn"></a> 
+                <a href="https://www.linkedin.com/in/kayleen-scott-310678307"> <p>LinkedIn</p></a>
+            </div>
+            <p>© 2025 Kayleen Scott. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
+</html>
+
