--- a/cocoplanet.html
+++ b/cocoplanet.html
@@ -1,13 +1,30 @@
-<header>
-  <link rel="stylesheet" href="cocoplanet.css">
-  <nav>
-      <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Buona Project</title>
+    <link rel="stylesheet" href="pizzabuona.css">
+    <!DOCTYPE html>
+<html lang="en">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <img src="Images/DarkPinkFlower2.png" class="Flower2">
 
@@ -33,8 +50,6 @@
   </div>
 </section>
 
-<script src="script.js"></script>
-
 <footer>
   <div class="footer-container">
       <div class="socials">
@@ -48,3 +63,6 @@
 
 <img src="Images/DarkPinkFlower1.png" class="Flower1">
 
+</body>
+
+<script src="script.js"></script>
