--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,30 @@
-<header>
-  <link rel="stylesheet" href="contact.css">
-  <nav>
-      <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Buona Project</title>
+    <link rel="stylesheet" href="contact.css">
+    <!DOCTYPE html>
+<html lang="en">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <div class="contact-container">
   <h1>Contact Me</h1>
@@ -47,5 +64,5 @@
 
 <img src="Images/DarkPinkFlower1.png" class="PortfolioFlower1">
 <img src="Images/DarkPinkFlower3.png" class="PortfolioFlower2">
-
+</body>
 <script src="script.js"></script>
