--- a/denverposter.html
+++ b/denverposter.html
@@ -34,13 +34,13 @@
       <p class="bodycopy">For this school project, I designed a Denver-themed Art Nouveau poster celebrating Colorado's natural beauty. Inspired by the state flower, the columbine, I incorporated it into a flowing border and featured the Colorado mountains as a central element. The color palette reflects the state’s “Colorful Colorado” nickname.</p>
   </div>
   <div class="image-content">
-      <img src="Images/Denver Poster and Sketches.png" alt="Denver Poster and Sketches">
+      <img src="Images/Denver Poster and Sketches.png" alt="Denver Poster and Sketches" loading="lazy">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/DenverPosterMockupBetter.png" alt="Denver Poster">
+      <img src="Images/DenverPosterMockupBetter.png" alt="Denver Poster" loading="lazy">
   </div>
 </section>
 
