--- a/lincolnseries.html
+++ b/lincolnseries.html
@@ -36,19 +36,19 @@
         To get the style I was going for, I realized that art deco was very blocky with clean lines and simple illustrations. I decided to try this and keep it simple while layering the illustrations to add some depth.</p>
     </div>
     <div class="image-content">
-      <img src="Images/LincolnSeriesOpener.png" alt="Lincoln Series Sunken Gardens Poster and a Sticker">
+      <img src="Images/LincolnSeriesOpener.png" alt="Lincoln Series Sunken Gardens Poster and a Sticker" loading="lazy">
     </div>
   </section>
 
   <section>
     <div class="full-image">
-      <img src="Images/LincolnSeriesPosters.png" alt="Lincoln Series Posters">
+      <img src="Images/LincolnSeriesPosters.png" alt="Lincoln Series Posters" loading="lazy">
     </div>
   </section>
 
   <section>
     <div class="full-image-2">
-      <img src="Images/StickersandPostcards.png" alt="Stickers and Postcards">
+      <img src="Images/StickersandPostcards.png" alt="Stickers and Postcards" loading="lazy">
     </div>
   </section>
 
