--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </header>
 
   
-<img src="Images/DarkPinkFlower2.png" class="Flower2">
+<img src="Images/DarkPinkFlower2.png" class="Flower2" loading="lazy">
 
 <section class="slide">
   <div class="text-content">
