--- a/themillgraphic.html
+++ b/themillgraphic.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-<img src="Images/BrownFlower2.png" class="Flower2">
+<img src="Images/DarkPinkFlower2.png" class="Flower2">
 
 <section class="slide">
   <div class="text-content">
@@ -35,19 +35,19 @@
       <p class="bodycopy">For this project, the goal was to create a two-color graphic for a t-shirt. I chose to design a piece inspired by The Mill, a local coffee shop. Since I had recently worked on the Colorado poster above, I wanted to experiment with a floral border again. I also loved the idea of using a coffee cup as a vase—it was a fun and creative way to tie in the theme. </p>
   </div>
   <div class="image-content">
-      <img src="Images/TheMillGraphic.png" alt="The Mill Graphic" loading="lazy">
+      <img src="Images/TheMillGraphic.png" alt="The Mill Graphic">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/TheMillHoodie.png" alt="The Mill Graphic Hoodie" loading="lazy">
+      <img src="Images/TheMillHoodie.png" alt="The Mill Graphic Hoodie">
   </div>
 </section>
 
 <section>
   <div class="full-image-2">
-      <img src="Images/TheMillGraphicMockups.png" alt="The Mill Graphic Mockups" loading="lazy">
+      <img src="Images/TheMillGraphicMockups.png" alt="The Mill Graphic Mockups">
   </div>
 </section>
 
@@ -62,7 +62,7 @@
 <div class="random-note" style="top: 300px; right: 50px; color: #3f1b16;">Interesting fact about this design.</div>
 </div> -->
 
-<img src="Images/BrownFlower1.png" class="Flower1">
+<img src="Images/DarkPinkFlower1.png" class="Flower1">
 
 <footer>
   <div class="footer-container">
