--- a/cocoplanet.html
+++ b/cocoplanet.html
@@ -34,19 +34,19 @@
       <p class="bodycopy">For this project, I designed a cereal box featuring astronaut bears, inspired by the shape and color of the cereal itself. The name Coco Planets naturally led me to create a space theme, with the bears floating in the colorful space. To make the sky more playful and engaging, I added colorful stars, hearts, and other fun details. I also designed cute planets to match the other elements.</p>
   </div>
   <div class="image-content">
-      <img src="Images/CocoPlanetBear.png" alt="Coco Planets Bear" loading="lazy">
+      <img src="Images/CocoPlanetsBear-11.png" alt="Coco Planets Bear">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/CocoPlanetsCereal.png" alt="Coco Planets Cereal" loading="lazy">
+      <img src="Images/CocoPlanetsMockupBetter-12.png" alt="Coco Planets Cereal">
   </div>
 </section>
 
 <section>
   <div class="full-image-2">
-      <img src="Images/CocoPlanetsMockup.png" alt="Coco Planets Cereal" loading="lazy">
+      <img src="Images/CocoPlanetsMockup-37.png" alt="Coco Planets Cereal">
   </div>
 </section>
 
