--- a/denverposter.html
+++ b/denverposter.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Buona Project</title>
-    <link rel="stylesheet" href="pizzabuona.css">
+    <title>Denver Poster</title>
+    <link rel="stylesheet" href="denverposter.css">
     <!DOCTYPE html>
 <html lang="en">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
@@ -34,13 +34,13 @@
       <p class="bodycopy">For this school project, I designed a Denver-themed Art Nouveau poster celebrating Colorado's natural beauty. Inspired by the state flower, the columbine, I incorporated it into a flowing border and featured the Colorado mountains as a central element. The color palette reflects the state’s “Colorful Colorado” nickname.</p>
   </div>
   <div class="image-content">
-      <img src="Images/Denver Poster and Sketches.png" alt="Denver Poster and Sketches" loading="lazy">
+      <img src="Images/Denver Poster and Sketches.png" alt="Denver Poster and Sketches">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/DenverPosterMockupBetter.png" alt="Denver Poster" loading="lazy">
+      <img src="Images/DenverPosterMockupBetter.png" alt="Denver Poster">
   </div>
 </section>
 
