--- a/flowerfields.html
+++ b/flowerfields.html
@@ -34,25 +34,25 @@
       <p class="bodycopy">For this project, I designed a CD cover featuring flowers I had photographed. After editing and arranging the images, the result didn’t quite match my vision, so I decided to print out the flowers and trace them by hand. I then scanned the tracing and layered it over the original flowers for a more detailed and stylized feel. For the text, I chose an interesting script font and experimented with embellishments on the beginning and end of the words.</p>
   </div>
   <div class="image-content">
-      <img src="Images/FlowerFieldsCover.png" alt="Flower Fields Cover" loading="lazy">
+      <img src="Images/FlowerFieldsCover-16.png" alt="Flower Fields Cover">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/FlowerFieldsSketches.png" alt="Flower Fields Sketches" loading="lazy">
+      <img src="Images/FlowerFieldsSketches.png" alt="Flower Fields Sketches">
   </div>
 </section>
 
 <section>
   <div class="full-image-2">
-      <img src="Images/FlowerFieldsFlat.png" alt="Flower Fields CD Design" loading="lazy">
+      <img src="Images/FlowerFieldsFlat-21.png" alt="Flower Fields CD Design">
   </div>
 </section>
 
 <section>
   <div class="full-image-3">
-      <img src="Images/FlowerFieldsMockup.png" alt="Flower Fields Mockup" loading="lazy">
+      <img src="Images/FlowerFieldsMockup-22.png" alt="Flower Fields Mockup">
   </div>
 </section>
 
