--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <section id="portfolio">
         <img src="Images/DesignPortfolioLogo.png" alt="Kayleen Scott Design Portfolio" class="logo">
         <div class="grid">
-            <a href="pizzabuona.html"><img src="Images/Pizza Buona Photo.png" alt="Pizza Buona" loading="lazy"></a>
-            <a href="lincolnseries.html"><img src="Images/LincolnSeries.png" alt="Lincoln Series" loading="lazy"></a>
-            <a href="denverposter.html"><img src="Images/DenverPosterMockup.png" alt="Denver Poster" class="DenverPoster" loading="lazy"></a>
-            <a href="themillgraphic.html"><img src="Images/TheMillHoodie.png" alt="The Mill Graphic" loading="lazy"></a>
-            <a href="cocoplanet.html"><img src="Images/CocoPlanetsMockup.png" alt="Coco Planets" loading="lazy"></a>
-            <a href="kaynjayschocolates.html"><img src="Images/KaynJaysChocolates.png" alt="Kay n Jay's Chocolates" loading="lazy"></a>
-            <a href="flowerfields.html"><img src="Images/FlowerFields.png" alt="Flower Fields" loading="lazy"></a>
+            <a href="pizzabuona.html"><img src="Images/PizzaBuonaGrid-44.png" alt="Pizza Buona" loading="lazy"></a>
+            <a href="lincolnseries.html"><img src="Images/LincolnSeriesGrid-39.png" alt="Lincoln Series" loading="lazy"></a>
+            <a href="denverposter.html"><img src="Images/DenverPosterGrid-43.png" alt="Denver Poster" class="DenverPoster" loading="lazy"></a>
+            <a href="themillgraphic.html"><img src="Images/TheMillGraphicGrid-41.png" alt="The Mill Graphic" loading="lazy"></a>
+            <a href="cocoplanet.html"><img src="Images/CocoPlanetsGrid-38.png" alt="Coco Planets" loading="lazy"></a>
+            <a href="kaynjayschocolates.html"><img src="Images/KaynJaysChocolatesGrid-40.png" alt="Kay n Jay's Chocolates" loading="lazy"></a>
+            <a href="flowerfields.html"><img src="Images/FlowerFieldsGrid-42.png" alt="Flower Fields" loading="lazy"></a>
         </div>
     </section>
 
