--- a/kaynjayschocolates.html
+++ b/kaynjayschocolates.html
@@ -34,25 +34,25 @@
       <p class="bodycopy">This was a personal project I created for Valentine’s Day for me and my boyfriend. I had drawn myself before, and when I decided to draw him as well, I thought it would be fun to incorporate both of us into candy packaging. That idea eventually led to Kay n Jay’s Chocolates, a brand featuring our nick-names. I came across a hand-drawn font that I really liked, which inspired me to create the Kay n Jay’s Chocolates lettering by hand.</p>
   </div>
   <div class="image-content">
-      <img src="Images/KaynJaysChocolatesFaces.png" alt="Kay n Jays Chocolates" loading="lazy">
+      <img src="Images/KaynJaysChocolatesFaces-13.png" alt="Kay n Jays Chocolates">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/LetteringProcessandFinal.png" alt="Lettering Process and Final Logo" loading="lazy">
+      <img src="Images/KaynJaysChocolatesLettering-14.png" alt="Lettering Process and Final Logo">
   </div>
 </section>
 
 <section>
   <div class="full-image-2">
-      <img src="Images/FinalKaynJaysChocolates.png" alt="Final of Kay n Jays Chocolates" loading="lazy">
+      <img src="Images/KaynJaysChocolatesMockupBetter-15.png" alt="Final of Kay n Jays Chocolates">
   </div>
 </section>
 
 <section>
   <div class="full-image-3">
-      <img src="Images/KaynJaysChocolates.png" alt="Kay n Jay's Chocolates" loading="lazy">
+      <img src="Images/KaynJaysChocolatesMockup-33.png" alt="Kay n Jay's Chocolates">
   </div>
 </section>
 
