--- a/lincolnseries.html
+++ b/lincolnseries.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Buona Project</title>
-    <link rel="stylesheet" href="pizzabuona.css">
+    <title>Lincoln Series</title>
+    <link rel="stylesheet" href="lincolnseries.css">
     <!DOCTYPE html>
 <html lang="en">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
@@ -36,19 +36,19 @@
         To get the style I was going for, I realized that art deco was very blocky with clean lines and simple illustrations. I decided to try this and keep it simple while layering the illustrations to add some depth.</p>
     </div>
     <div class="image-content">
-      <img src="Images/LincolnSeriesOpener.png" alt="Lincoln Series Sunken Gardens Poster and a Sticker" loading="lazy">
+      <img src="Images/LincolnSeriesOpener-04.png" alt="Lincoln Series Sunken Gardens Poster and a Sticker">
     </div>
   </section>
 
   <section>
     <div class="full-image">
-      <img src="Images/LincolnSeriesPosters.png" alt="Lincoln Series Posters" loading="lazy">
+      <img src="Images/LincolnSeriesPosters-05.png" alt="Lincoln Series Posters">
     </div>
   </section>
 
   <section>
     <div class="full-image-2">
-      <img src="Images/StickersandPostcards.png" alt="Stickers and Postcards" loading="lazy">
+      <img src="Images/LincolnSeries-06.png" alt="Stickers and Postcards">
     </div>
   </section>
 
