--- a/pizzabuona.html
+++ b/pizzabuona.html
@@ -38,28 +38,28 @@
                 To achieve this, I focused on balancing fun and illustrative designs with my own style. I chose a softer color palette paired with dynamic elements to bring a handcrafted yet refined feel.</p>
         </div>
         <div class="image-content">
-            <img src="Images/PizzaBuonaBrandGuide.png" alt="Pizza Buona Brand Guide and Sketches" loading="lazy">
+            <img src="Images/PizzaBuonaBrandGuide-01.png" alt="Pizza Buona Brand Guide and Sketches" loading="lazy">
         </div>
     </section>
 
     <!-- Full-Width Image of Final Packaging -->
     <section>
         <div class="full-image">
-            <img src="Images/Pizza Buona Photo.png" alt="Final of Pizza Buona Packaging" loading="lazy">
+            <img src="Images/PizzaBuonaPhoto-32.png" alt="Final of Pizza Buona Packaging" loading="lazy">
         </div>
     </section>
 
     <!-- Pizza Menu Image -->
     <section>
         <div class="full-image-2">
-            <img src="Images/PizzaBuonaMenu-02.png" alt="Pizza Buona Menu" loading="lazy">
+            <img src="Images/PizzaBuonaMenu72-02.png" alt="Pizza Buona Menu" loading="lazy">
         </div>
     </section>
 
     <!-- Coasters, Trayliner, and Pizza Box Image -->
     <section>
         <div class="full-image-3">
-            <img src="Images/PizzaBuonaTrayLinerCoastersandPizzaBox.png" alt="Pizza Buona Coasters, Trayliner, and Pizza Box" loading="lazy">
+            <img src="Images/PizzaBuonaTrayLinerCoastersandPizzaBox-03.png" alt="Pizza Buona Coasters, Trayliner, and Pizza Box" loading="lazy">
         </div>
     </section>
 
