--- a/themillgraphic.html
+++ b/themillgraphic.html
@@ -35,19 +35,19 @@
       <p class="bodycopy">For this project, the goal was to create a two-color graphic for a t-shirt. I chose to design a piece inspired by The Mill, a local coffee shop. Since I had recently worked on the Colorado poster above, I wanted to experiment with a floral border again. I also loved the idea of using a coffee cup as a vase—it was a fun and creative way to tie in the theme. </p>
   </div>
   <div class="image-content">
-      <img src="Images/TheMillGraphic.png" alt="The Mill Graphic">
+      <img src="Images/TheMillGraphic-09.png" alt="The Mill Graphic">
   </div>
 </section>
 
 <section>
   <div class="full-image">
-      <img src="Images/TheMillHoodie.png" alt="The Mill Graphic Hoodie">
+      <img src="Images/TheMillMockup-36.png" alt="The Mill Graphic Hoodie">
   </div>
 </section>
 
 <section>
   <div class="full-image-2">
-      <img src="Images/TheMillGraphicMockups.png" alt="The Mill Graphic Mockups">
+      <img src="Images/TheMillMockups-10.png" alt="The Mill Graphic Mockups">
   </div>
 </section>
 
