--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Buona Project</title>
-    <link rel="stylesheet" href="pizzabuona.css">
+    <link rel="stylesheet" href="about.css">
     <!DOCTYPE html>
 <html lang="en">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
