--- a/flowerfields.html
+++ b/flowerfields.html
@@ -66,14 +66,14 @@
 <!-- <p class="Note1">The Tracing</p> -->
 
 <footer>
-  <div class="footer-container">
-      <div class="socials">
-          <a href="mailto:kayleenannscott@gmail.com" target="_blank"><img src="Images/EmailLogo.png" alt="Gmail"></a> <a href=mailto:kayleenannscott@gmail.com> <p>kayleenannscott@gmail.com</p></a>
-          <a href="https://www.instagram.com/thatkatdraws/" target="_blank"><img src="Images/InstagramLogo.png" alt="Instagram"></a> <a href=https://www.instagram.com/thatkatdraws/ > <p>@thatkatdraws</p></a>
-          <a href="https://www.linkedin.com/in/kayleen-scott-310678307/" target="_blank"><img src="Images/LinkedInLogo.png" alt="LinkedIn"></a> <a href=https://www.linkedin.com/in/kayleen-scott-310678307/ > <p>https://www.linkedin.com/in/kayleen-scott-310678307/</p></a>
-      </div>
-      <p>© 2025 Kayleen Scott. All rights reserved.</p>
-  </div>
-</footer>
+    <div class="footer-container">
+        <div class="socials">
+            <a href="mailto:kayleenannscott@gmail.com" target="_blank"><img src="Images/EmailLogo.png" alt="Gmail"></a> <a href=mailto:kayleenannscott@gmail.com> <p>kayleenannscott@gmail.com</p></a>
+            <a href="https://www.instagram.com/thatkatdraws/" target="_blank"><img src="Images/InstagramLogo.png" alt="Instagram"></a> <a href=https://www.instagram.com/thatkatdraws> <p>@thatkatdraws</p></a>
+            <a href="https://www.linkedin.com/in/kayleen-scott-310678307/" target="_blank"><img src="Images/LinkedInLogo.png" alt="LinkedIn"></a> <a href=https://www.linkedin.com/in/kayleen-scott-310678307> <p>LinkedIn</p></a>
+        </div>
+        <p>© 2025 Kayleen Scott. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 <script src="script.js"></script>
