--- a/lincolnseries.html
+++ b/lincolnseries.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-  <img src="Images/DarkPinkFlower2.png" class="Flower2" alt="Dark pink flower decoration">
+  <!-- <img src="Images/DarkPinkFlower2.png" class="Flower2" alt="Dark pink flower decoration"> -->
 
   <section class="slide">
     <div class="text-content">
