--- a/pizzabuona.html
+++ b/pizzabuona.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Floral Image (for background decoration) -->
-    <img src="Images/DarkPinkFlower2.png" class="Flower2" alt="Flower Decoration">
+    <!-- <img src="Images/DarkPinkFlower2.png" class="Flower2" alt="Flower Decoration"> -->
 
     <!-- Project Description -->
     <section class="slide">
