--- a/themillgraphic.html
+++ b/themillgraphic.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-<img src="Images/DarkPinkFlower2.png" class="Flower2">
+<!-- <img src="Images/DarkPinkFlower2.png" class="Flower2"> -->
 
 <section class="slide">
   <div class="text-content">
