--- a/flowerfields.html
+++ b/flowerfields.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-<img src="Images/DarkPinkFlower2.png" class="Flower2">
+<!-- <img src="Images/DarkPinkFlower2.png" class="Flower2"> -->
 
 <section class="slide">
   <div class="text-content">
